# tractome

./: .gitignore  pyproject.toml
old/: app.py
requirements/: default.txt
tractome/: __main__.py  app.py  cli.py  compute.py  io.py  mem.py  ui.py  viz.py
tractome/assets/: style.qss
tractome/mem/: _input_manager.py  _state_manager.py  _visualization_manager.py
tractome/ui/: __init__.py  _control_section.py  _input_section.py  _views.py  _visualization_section.py  utils.py
